--- a/css/sphere.css
+++ b/css/sphere.css
@@ -1,95 +1,68 @@
 body {
-	background-color: #333;
-	font-family: Lato;
-	color: #DDD;	
-}
-
-h1 {
-        font-size: 64px;
+    background-color: #333;
+    font-family: Lato;
+    color: #DDD;
 }
 
 h1,h2,h3,h4 {
-	font-weight: 100;
-	position: relative;
-	margin: 30px auto;
-	text-align: center;
+    font-weight: 100;
+    position: relative;
+    margin: 30px auto;
+    text-align: center;
 }
-
+h1 {
+    font-size: 64px;
+}
 p {
-	line-height: 30px;
+    line-height: 30px;
 }
 
-#header {
-	position: relative;
-	width: 100%;
-}
-
-#header-title, #header-subtitle {
-	width: 500px;
-}
-#header-subtitle {
-	font-style: italic;
+header > h2 {
+    font-style: italic;
 }
 
 
-#content {
-	padding: 0px;
-	width: 810px;
-	height: 900px;
-	margin: 0px auto;
-	position: relative;
-	top: -50px;
+main {
+    max-width: 810px;
+    margin: 0px auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
-#canvas {
-	border: 2px solid black;
-	z-index: 2;
+#controls > h3 {
+    text-align: center;
+    margin-bottom: 15px;
 }
 
-#controls {
-	width: 810;
-	height: 200px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 60px;
-	margin-bottom: -50px;
-	z-index:1;
-	position: relative;
+ul#controls-listing {
+    /** removing the default ul padding*/
+    padding: 0;
+
+    /* flexbox fallback if grid is not supported */
+    display: flex;
+    justify-content: space-between;
+
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+}
+ul#controls-listing > li {
+    list-style: none;
+    text-align: center;
+}
+ul#controls-listing > li:first-child {
+    text-align: left;
+}
+ul#controls-listing > li:last-child {
+    text-align: right;
 }
 
-#controls-title {
-	width: 75px;
-	margin-bottom: 15px;
+canvas {
+    border: 2px solid black;
 }
 
-#controls-body {
-	width: 100%;
-	position: relative;
-	margin: 0px;
-}
-
-#c-1 { /* Rotate */
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	margin: 0px;
-}
-
-#c-2 { /* Pan */
-	position: relative;
-	width: 200px; 
-	text-align: center;
-	margin: 0px auto;
-	right: 10px;
-}
-
-#c-3 { /* Zoom */
-	position: absolute;
-	right: 10px;
-	top: 0px;
-	margin: 0px;
-}
-
-#psst {
-	font-style: italic;
+.psst {
+    font-style: italic;
 }
